// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app Renders token counts consistently 🎉 1`] = `
<div>
  <p
    class="aWBg0w _6klkDA Sp3u_w Gcy95A aZskFA Yrg82w"
  >
    Use 5 of 50 credits
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 2`] = `
<div>
  <p
    class="aWBg0w _6klkDA Sp3u_w Gcy95A aZskFA Yrg82w"
  >
    Use 1 of 1 credit
  </p>
</div>
`;

exports[`app Renders token counts consistently 🎉 3`] = `
<div>
  <p
    class="aWBg0w _6klkDA Sp3u_w Gcy95A aZskFA Yrg82w"
  >
    Use 1 of 0 credits
  </p>
</div>
`;
